[gd_scene load_steps=6 format=3 uid="uid://dusvs7mfb7k85"]

[ext_resource type="Texture2D" uid="uid://bo511goyy0l0c" path="res://sprites/MainMenuBackground.png" id="1_03oij"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_s206n"]
[ext_resource type="Theme" uid="uid://b4c40bsjnj7ua" path="res://themes/main_menu.tres" id="3_3gcha"]
[ext_resource type="AudioStream" uid="uid://mkeqdbp5ujvm" path="res://audio/Whispers in the Dark - Main Menu Theme.mp3" id="4_3y0s3"]
[ext_resource type="AudioStream" uid="uid://jhns037m5wtm" path="res://audio/Light Buzz.mp3" id="5_loi3k"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("dir_light", "light_timer", "light_buzz_audio")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s206n")
dir_light = NodePath("DirectionalLight2D")
light_timer = NodePath("LightTimer")
light_buzz_audio = NodePath("LightBuzzAudioStreamPlayer2D")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 718.0
scale = Vector2(0.901331, 0.901331)
texture = ExtResource("1_03oij")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(581, 0)
energy = 0.5
blend_mode = 1

[node name="LightTimer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -9.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = -10
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = -10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 400
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_3gcha")
text = "Play"

[node name="ExitButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_3gcha")
text = "Exit"

[node name="MusicAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3y0s3")
autoplay = true

[node name="LightBuzzAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_loi3k")

[connection signal="timeout" from="LightTimer" to="." method="light_timer_timeout"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PlayButton" to="." method="play_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ExitButton" to="." method="exit_button_pressed"]
